--- a/assets/style.css
+++ b/assets/style.css
@@ -91,12 +91,12 @@ section h2 {
     font-size: 20px;
 }
 
-#About-Me {
+#about-me {
     border-radius: 5px;
     border-color: black;
 }
 
-#Projects {
+#projects {
     display: flex;
     flex-wrap: wrap;
     height: 375px;
@@ -144,19 +144,12 @@ aside img {
     border-radius: 5px;
 }
 
-.Contact {
+.contact {
     margin-bottom: 32px;
     color: #ffffff;
 }
 
-.Contact h3 {
+.contact h3 {
     margin-bottom: 10px;
     text-align: center;
-}
-
-footer {
-    padding: 30px;
-    clear: both;
-    text-align: center;
-    font-size: 20px;
 }
