--- a/assets/style.css
+++ b/assets/style.css
@@ -78,6 +78,7 @@ section h2 {
     height: 300px;
     background-color: #000000bd;
     color: #ffffff;
+    border-radius: 5px;
 }
 
 .content h2 {
@@ -91,7 +92,7 @@ section h2 {
 }
 
 #about-me {
-    border-radius: 5px;
+    /* border-radius: 5px; */
     height: fit-content;
 }
 
@@ -100,6 +101,7 @@ section h2 {
     flex-wrap: wrap;
     height: max-content;
     border-radius: 5px;
+    margin-bottom: 20px;;
 }
 
 .icon {
